
This file shows the changes in recent releases of MODX. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- Add GroupPrincpal/UserPrincipal aggregates to modAccess
- [#7387] Add New Category button to Element tree toolbar
- [#7518] Fix issue that prevented absolute URLs in media-source bound TVs
- [#7521] Allow filtering of usergroup by request on users page
- Add assets_path field to modNamespace
- [#7447] Change default root node name of Files tab to "Media" to prevent confusion when a non-default source is selected
- Drop no-longer used, deprecated modAction.parent field
- [#7503] Change Duplicate Values text to Duplicate Resource Values to clear up intended behavior
- [#7499] Fix DOM ID issues with Quick Update when multiple windows are loaded
- [#7500] Make consistent positioning of published checkbox in quick update and normal edit page
- [#7491] Prevent Media Source dropdown from showing in MODx.Browser when loaded from a TV
- [#6894] Move Import button on Access Policy and Access Policy Template grids to top toolbar
- [#7391] Fix UI error causing resource group checkboxes on TV edit page to not render correctly
- [#7481] Fix issue with reloading resource when changing templates and the context alias cache
- Add "sudo" user attribute, which bypasses access permissions for said user; upgrade to 2.2.1 makes Super Users in Administrator group sudo users
- [#7445] Fix issues with TVs not respecting Resource Groups limiting access
- [#7446] Added extra checks to protect against parse errors with :then and :else output filters
- [#7455] Fallback to TV name if caption not found when displaying TV inputs
- [#7456] Fix for minify not modified status in fastcgi environments
- [#6931] Workaround for template changing issue on servers that have misconfigured date_timzeone setting
- [#6687] Fix duplicated OK buttons in MODx.Console in certain situations