@@ -2,6 +2,7 @@
 This file shows the changes in recent releases of MODX. The most current release is usually the
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
+- Override modAccess->getOne for Principal aggregate
 - Add GroupPrincpal/UserPrincipal aggregates to modAccess
 - [#7387] Add New Category button to Element tree toolbar
 - [#7518] Fix issue that prevented absolute URLs in media-source bound TVs
